chore(): (AIESEC-317) fix input css style and autocomplete

--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -116,7 +116,7 @@
             </div>
 
             <div class='col-1'>
-              <button class='button with-background default' (click)='getZipcode(user.cep)'>
+              <button class='button with-background default border-bottom' (click)='getZipcode(user.cep)'>
                 <i class="fas fa-search"></i>
               </button>
             </div>
