--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -221,7 +221,7 @@
                     </div>
                   </div>
                 </div>
-                <div *ngIf="isValidPersonal('password')" class='error-message animated fadeIn'>
+                <div *ngIf="isValidPersonal('password') || isValidPersonal('repassword')" class='error-message animated fadeIn'>
                   Preencha com a sua senha.
                   <br>
                   <span>
