chore(landing page host): do not redirect to thank you page, form with automcplete fixed

--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
@@ -2,7 +2,6 @@
 	<link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 	<!-- Facebook Pixel Code -->
 	<script>
-		
 		fbq('init', '635983890160770');
 		fbq('track', 'PageView');
 	</script>
@@ -20,18 +19,16 @@
 						<section class="content" id="resultado">
 							<div class="container">
 								<div class="row justify-content-center">
-									<div class="col-md-8">
+									<div class="col-lg-11 col-md-12 col-sm-12">
 										<div class="row justify-content-center">
 											<div class="col-md-12" id="header-resultado">
 												<h2>Obrigado por se increver!</h2>
 											</div>
 											<div class="col-md-12 grid-message mobile-message" id="grid-message">
-												<div class="col-md-10">
+												<div class="col-md-12 col-sm-12">
 													<h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
-													<button type='button' (click)='redirectToHome()' class='btn btn-light'> Retornar à página principal </button>
-												</div>
-												<div class="col-md-2">
 													<i class="fas fa-thumbs-up fa-10x color-icon"></i>
+													<button type='button' (click)='redirectToHome()' class='btn btn-light'> Retornar à página principal </button>
 												</div>
 											</div>
 										</div>
