fix(form-ge, form-gv, form-gt): fixed password verification
AIESEC-319 - https://devmagic.atlassian.net/browse/AIESEC-319

--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -18,7 +18,7 @@
     *:not(.fas, .menu-icon) {
         text-transform: uppercase !important;
         font-weight: 300;
-        font-size: 1.15rem;
+        font-size: 14px;
     }
     i {
         font-weight: bold;
