--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -178,7 +178,7 @@
                     <!-- mobile -->
                     <i class="fas fa-lock mobile mobile-icon"></i>
                     <input type="password" class="form-control mobile" [(ngModel)]="user.repassword" formControlName="repassword" name="repassword"
-                      required placeholder="Confirmar senha">
+                      required placeholder="Confirmar senha" (blur)="checkPassword()">
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
