--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -380,7 +380,7 @@ ul#menu {
         span {
             font-weight: bold;
             text-align: left;
-            font-size: 1.8rem !important;
+            font-size: 18px !important;
             padding-top: 10px !important;
             display: block;
         }
@@ -391,7 +391,7 @@ ul#menu {
             background-color: transparent !important;
 
             li {
-                font-size: 1.6rem;
+                font-size: 18px;
                 padding: 15px 0px !important;
             }
         }
