chore(form host): submit method redirect user to 'host-details-form-area'

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -71,7 +71,7 @@ Confira no vídeo ao lado o relato de um de nossos participantes!
   </section>
 
   <section class="host-details">
-    <div class="container">
+    <div class="container" id='host-details-form-area'>
       <div class="row host-header" id="host-header">
         <div class='col-lg-4 col-sm-12 col-md-12 logo-container'>
           <div class='logo'></div>
