chore(landing page subproducts): section created and integrated to landing page gt

--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -24,6 +24,8 @@
     </div>
   </section>
 
+  <app-landing-page-subproducts [subproducts]='subproducts'></app-landing-page-subproducts>
+  
   <!-- Form gt -->
   <app-form-gt id="form"></app-form-gt>
 
@@ -97,7 +99,7 @@
                 Entrevistas para vagas que for selecionado
               </h3>
               <p class="lighter">
-                  Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
+                Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
               </p>
             </div>
           </div>
