fix(landing page host): redirect to section 'host-details'

--- a/src/app/landing-page-host/landing-page-host.component.html
+++ b/src/app/landing-page-host/landing-page-host.component.html
@@ -70,7 +70,7 @@ Confira no vídeo ao lado o relato de um de nossos participantes!
     </div>
   </section>
 
-  <section class="host-details">
+  <section class="host-details" id='host-details-form-area'>
     <div class="container">
       <div class="row host-header" id="host-header">
         <div class='col-lg-4 col-sm-12 col-md-12 logo-container'>
@@ -98,7 +98,7 @@ Confira no vídeo ao lado o relato de um de nossos participantes!
             </div>
           </div>
         </div>
-        <div class='col-lg-8 col-sm-12 col-md-12' id='host-details-form-area'>
+        <div class='col-lg-8 col-sm-12 col-md-12'>
           <app-form-host></app-form-host>
         </div>
       </div>
