--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -29,7 +29,7 @@
   <!-- Form gt -->
   <app-form-gt id="form"></app-form-gt>
 
-  <app-landing-page-countries></app-landing-page-countries>
+  <app-landing-page-countries [countries]='countries'></app-landing-page-countries>
 
 
   <section class="product-steps margin-top-and-bottom">
