--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.html
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.html
@@ -5,27 +5,27 @@
     </div>
   </div>
   <h1>
-    Subprodutos
+    Áreas de Atuação
   </h1>
   <p>
-    Subprodutos que trabalhamos no Programa Talento Global.
+    Impulsione sua carreira com uma experiência profissional internacional
   </p>
 </header>
 <section id='subproducts'>
   <div class='container'>
     <div class='row'>
-      <div class='col-lg-6 col-sm-12 col-md-12 each-subproduct' *ngFor='let subproduct of subproducts'>
+    <div class='col-lg-3 col-sm-12 col-md-12 each-subproduct' *ngFor='let subproduct of subproducts'>
         <div class='icon col-12'>
           <img src='{{subproduct.icon}}'>
         </div>
         <div class='col-12'>
           <h3>
-            {{ subproduct.name }}
+            {{ subproduct.name }} 
           </h3>
           <p>
             {{ subproduct.description }}
           </p>
-          <a href='{{subproduct.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank"> Inscreva-se </a>
+          <a href='{{subproduct.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank"> Ver oportunidades </a>
         </div>
       </div>
     </div>
