--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
@@ -111,6 +111,11 @@ header {
 
 }
 
+@media (min-width: 991px) {
+    #subproducts p {
+        min-height: 120px
+    }
+}
 @media (max-width: 990px) {
     *, #subproducts * {
         text-align: center;
