--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -51,12 +51,12 @@
                   </div>
                 </div>
                 <!-- desktop -->
-                <input type="text" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                <input type="email" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
                   formControlName="email" name="email" required>
 
                 <!-- mobile -->
                 <i class="fas fa-envelope mobile mobile-icon"></i>
-                <input type="text" class="form-control mobile" placeholder="E-mail" (blur)="checkEmail()" [(ngModel)]="user.email" formControlName="email"
+                <input type="email" class="form-control mobile" placeholder="E-mail" (blur)="checkEmail()" [(ngModel)]="user.email" formControlName="email"
                   name="email" required>
                 <div class="valid-feedback">
                   <i class="fas fa-check"></i>
