--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -15,24 +15,38 @@
           </h2>
           <p>
             O Talento Global é uma experiência internacional em empresas durante 3 a 12 meses em que o jovem tem a chance de viver o
-            ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Ensino de Idiomas, Tecnologia
+            ambiente profissional e corporativo. As grandes áreas de atuação do Talento Global são: Professor(a) de Idiomas/Línguas, Tecnologia
             da Informação e áreas de Administração, como finanças, gestão, RH e marketing. Para o processo, é necessário
-            alguns requisitos como: inglês avançado e experiência na área que quer atuar. Nessa experiência, o intercambista
-            recebe uma bolsa-auxílio para cobrir os custos básicos durante o período de intercâmbio.
+            alguns requisitos como: <b>inglês avançado</b> e experiência na área que quer atuar. Nessa experiência, o intercambista
+            recebe uma <b>bolsa-auxílio</b> para cobrir os custos básicos durante o período de intercâmbio.
         </div>
       </div>
     </div>
   </section>
 
   <app-landing-page-subproducts [subproducts]='subproducts'></app-landing-page-subproducts>
-  
+
   <!-- Form gt -->
   <app-form-gt id="form"></app-form-gt>
 
   <app-landing-page-countries [countries]='countries'></app-landing-page-countries>
 
 
+
   <section class="product-steps margin-top-and-bottom">
+    <header>
+      <div class='banner' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+        <div class='circle' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}">
+            <i class="fas fa-walking"></i>
+        </div>
+      </div>
+      <h1>
+        Quero participar, e agora?
+      </h1>
+      <p>
+        Confira as etapas do nosso processo
+      </p>
+    </header>
     <div class="container">
       <div class="row">
         <div class="product-image background-default col-lg-5 col-md-12 col-sm-12">
@@ -45,23 +59,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Cadastre-se
-              </h3>
-              <p class="lighter">
-                Preencha seu cadastro e veja as oportunidades em nosso site.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
                 Contato com a AIESEC
               </h3>
               <p class="lighter">
-                A AIESEC mais próxima de você entrará em contato para tirar suas dúvidas e indicar vagas.
+                Se cadsatre e a AIESEC mais próxima entrará em contato contigo para fazer uma consultoria e indicar vagas
               </p>
             </div>
           </div>
@@ -71,11 +72,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Fazer o CV em inglês
+                Fazer o currículo em inglês
               </h3>
               <p class="lighter">
-                É necessário preparar seu CV em inglês para apresentar para as empresas que você está se candidatando. Não se preocupe, estamos
-                aqui para te ajudar!
+                É necessário preparar seu currículo em inglês para enviar para as vagas que você está se candidatando no site! Não se preocupe, estamos aqui para te ajudar!
               </p>
             </div>
           </div>
@@ -85,24 +85,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Aplique em nossas vagas
+                Fazer entrevistas
               </h3>
               <p class="lighter">
-                No site você pode se candidatar as diversas vagas que encaixam no seu perfil, a partir da consultoria feita com seu escritório
-                da AIESEC.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Entrevistas para vagas que for selecionado
-              </h3>
-              <p class="lighter">
-                Você vai passar por entrevistas ao longo do processo para algumas vagas para as quais você se candidatou.
+                Após se aplicar nas vagas que se encaixam no seu perfil, você poderá ser chamado para algumas delas ao longo do processo
               </p>
             </div>
           </div>
@@ -115,8 +101,7 @@
                 Ser aprovado na vaga
               </h3>
               <p class="lighter">
-                Depois das entrevistas, você será convidado a fechar o intercâmbio para a oportunidade que for aceito, mediante o pagamento
-                de uma taxa administrativa.
+                Após as entrevistas, você poderá ser selecionado em alguma dessas vagas, e mediante o pagamento da taxa administrativa da AIESEC, poderá fechar seu intercâmbio!
               </p>
             </div>
           </div>
@@ -126,23 +111,10 @@
             </div>
             <div class="col-lg-10 col-md-12 col-sm-12">
               <h3 class="bold line-height-lower darker">
-                Se prepare para o seu Intercâmbio
+                Viver a experiência
               </h3>
               <p class="lighter">
-                Com o suporte da AIESEC você se preparará para viajar e fazer um projeto incrível.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 centered">
-              <div class="round circle icon with-border without-background gt lower"></div>
-            </div>
-            <div class="col-lg-10 col-md-12 col-sm-12">
-              <h3 class="bold line-height-lower darker">
-                Viva a Experiência
-              </h3>
-              <p class="lighter">
-                Agora é só viajar e, com auxílio da AIESEC, viver uma experiência de liderança!
+                Com o suporte da AIESEC você vai se preparar para o início de sua experiência de desenvolvimento de liderança e terá auxílio durante todo o período do intercâmbio
               </p>
             </div>
           </div>
@@ -165,6 +137,14 @@
             FAQ - Dúvidas Frequentes
           </h2>
           <div class="row">
+          <div class="col-sm-12">
+              <h3 class='semibold'>
+                Qual o perfil ideal para fazer um Talento Global?
+              </h3>
+              <p class='lighter italic'>
+                  Você pode ser graduando, Pós-graduando, mestrando, recém formado ou formado há algum tempo para esse intercâmbio. O necessário é ter 18 a 30 anos, inglês avançado e experiência prévia em alguma dessas áreas: professor de idiomas, gestão, marketing ou tecnologia da informação.
+              </p>
+            </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
                 Como será meu contato com a AIESEC durante o intercâmbio?
@@ -184,22 +164,12 @@
             </div>
             <div class="col-sm-12">
               <h3 class='semibold'>
-                Preciso de seguro viagem para viajar?
+                Preciso de seguro saúde para viajar?
               </h3>
               <p class='lighter italic'>
-                Sim, o seguro viagem é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
+                Sim, o seguro saúde é obrigatório no seu intercâmbio com a AIESEC, para garantir seu bem-estar durante toda a viagem. Nós
                 recomendamos o seguro Assistcard para nossos intercambistas, mas você pode contratar a seguradora que você
                 preferir.
-              </p>
-            </div>
-            <div class="col-sm-12">
-              <h3 class='semibold'>
-                Qual o perfil ideal para fazer um Talento Global?
-              </h3>
-              <p class='lighter italic'>
-                Você não precisa ser estudante ou recém-formado para esse intercâmbio. O que é necessário é ter entre 18 e 30 anos, com inglês
-                avançado e experiência prévia em alguma dessas áreas: Ensino de Línguas, Marketing, Tecnologia da Informação,
-                Gestão.
               </p>
             </div>
             <div class="col-sm-12">
@@ -230,7 +200,7 @@
               <h3 class="bold line-height-lower darker">
                 Auxílio para achar sua vaga
               </h3>
-              <p class="lighter lower">
+              <p class="lighter">
                 Ao se inscrever, um voluntário da AIESEC vai te auxiliar a achar a vaga certa para o seu perfil, tirar todas suas dúvidas
                 e vai te colocar em contato com o escritório para onde você vai viajar.
               </p>
@@ -244,7 +214,7 @@
               <h3 class="bold line-height-lower darker">
                 Apoio logístico
               </h3>
-              <p class="lighter lower">
+              <p class="lighter">
                 Antes e durante o intercâmbio, a AIESEC na sua cidade e no seu destino irão te auxiliar com a logística de transporte, acomodação
                 e preparo para o seu projeto.
               </p>
@@ -258,7 +228,7 @@
               <h3 class="bold line-height-lower darker">
                 Descrição de trabalho
               </h3>
-              <p class="lighter lower">
+              <p class="lighter">
                 Independente do tipo de intercâmbio, nossas oportunidades possuem descrições do projeto que você vai participar, carga horária
                 e as suas responsabilidades. Além disso, você pode conversar com a nossa equipe para esclarecer qualquer
                 dúvida.
@@ -273,7 +243,7 @@
               <h3 class="bold line-height-lower darker">
                 Experiência de Liderança
               </h3>
-              <p class="lighter lower">
+              <p class="lighter">
                 Ao longo da sua experiência com a AIESEC, serão oferecidos diversos espaços para você refletir e aprimorar as habilidades
                 desenvolvidas no seu intercâmbio, para que você possa retornar e trazer um impacto real para sua cidade.
               </p>
