--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
@@ -2,6 +2,7 @@
 
 header {
     text-align: center;
+    padding: 20px 0;
 
     p {
         font-size: 16px;
@@ -29,7 +30,7 @@ header {
             top: -10px;
             position: relative;
             left: 50%;
-            margin-left: -30px;
+            margin-left: -45px;
             background-size: 50%;
             background-repeat: no-repeat;
             background-position: center center;
@@ -113,7 +114,7 @@ header {
 
 @media (min-width: 991px) {
     #subproducts p {
-        min-height: 120px
+        min-height: 200px;
     }
 }
 @media (max-width: 990px) {
