fix(landing page menu): 'lar global' link fixed

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -82,7 +82,7 @@
                 </a>
               </ul>
             </li>
-            <a class='aiesec-search' href='https://aiesec.org/search' href='https://aiesec.org/search' target="_blank" *ngIf="actualPage == ''">
+            <a class='aiesec-search' href='https://aiesec.org/search' href='https://aiesec.org/search' target="_blank" *ngIf="actualPage == '' || actualPage == 'hospede-um-intercambista'">
               <li>
                 Veja nossas oportunidades
               </li>
