chore(*): 'hospede-um-intercambista' changed to 'lar-global'

--- a/src/app/contact-list/contact-list.component.scss
+++ b/src/app/contact-list/contact-list.component.scss
@@ -20,7 +20,7 @@
         }
     }
 
-    &.hospede-um-intercambista { 
+    &.lar-global { 
         border-bottom: 1px solid rgba(0,0,0,.1);
         p, h3 {
             color: #4a4a4a;
