chore(landing page countries): mobile animation fixed

--- a/src/app/landing-page-countries/landing-page-countries.component.html
+++ b/src/app/landing-page-countries/landing-page-countries.component.html
@@ -9,7 +9,7 @@
           <li *ngFor='let country of countries' [ngClass]='{"active": country.active }' (click)='selectCountry(country)'>
             <img src='{{ country.flag }}'>
             <label>{{ country.name }}</label>
-            <div *ngIf='country.active' class='mobile'>
+            <div *ngIf='country.active' class=' animated faster fadeIn mobile'>
               <div class='col-12'>
                 <div class='country-image'>
                   <img class='country-image-value' src='{{country.image}}'>
