--- a/src/app/landing-page-countries/landing-page-countries.component.scss
+++ b/src/app/landing-page-countries/landing-page-countries.component.scss
@@ -105,6 +105,7 @@
 
 @media (max-width: 990px) {
     #countries {
+        padding: 20px 0 0 0 !important;
         margin-bottom: 20px;
         ul li {
             display: flex;
