--- a/src/app/landing-page-gt/landing-page-gt.component.scss
+++ b/src/app/landing-page-gt/landing-page-gt.component.scss
@@ -6,6 +6,7 @@
 header {
     text-align: center;
     padding: 20px 0;
+    width: 100%;
     p {
         font-size: 16px;
         font-weight: lighter;
@@ -418,6 +419,7 @@ header {
         display:flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         h3 {
             font-size: 1.65em;
         }
