--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.scss
@@ -102,6 +102,10 @@ header {
                 border: 3px solid #0b8ea0;
                 color: #0b8ea0;
                 font-size: 13px;
+                &:hover {
+                    background-color: $primary-gt;
+                    color: #fff;
+                }
             }
 
             &.ge {
