chore(landing page gt / countries): padding/margin fixed and countries content improved

--- a/src/app/landing-page-gt/landing-page-gt.component.scss
+++ b/src/app/landing-page-gt/landing-page-gt.component.scss
@@ -85,6 +85,7 @@ header {
 
 .product-steps {
     min-height: 200px;
+    margin: 45px auto !important;
     .container>.row {
         justify-content: space-between;
     }
