chore(landing page gt): 'steps' content fixed

--- a/src/app/landing-page-gt/landing-page-gt.component.html
+++ b/src/app/landing-page-gt/landing-page-gt.component.html
@@ -62,7 +62,7 @@
                 Contato com a AIESEC
               </h3>
               <p class="lighter">
-                Se cadsatre e a AIESEC mais próxima entrará em contato contigo para fazer uma consultoria e indicar vagas
+                Se cadastre e a AIESEC mais próxima entrará em contato contigo para fazer uma consultoria e indicar vagas.
               </p>
             </div>
           </div>
@@ -88,7 +88,7 @@
                 Fazer entrevistas
               </h3>
               <p class="lighter">
-                Após se aplicar nas vagas que se encaixam no seu perfil, você poderá ser chamado para algumas delas ao longo do processo
+                Após se aplicar nas vagas que se encaixam no seu perfil, você poderá ser chamado para algumas delas ao longo do processo.
               </p>
             </div>
           </div>
@@ -114,7 +114,7 @@
                 Viver a experiência
               </h3>
               <p class="lighter">
-                Com o suporte da AIESEC você vai se preparar para o início de sua experiência de desenvolvimento de liderança e terá auxílio durante todo o período do intercâmbio
+                Com o suporte da AIESEC você vai se preparar para o início de sua experiência de desenvolvimento de liderança e terá auxílio durante todo o período do intercâmbio.
               </p>
             </div>
           </div>
