--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -25,6 +25,8 @@
   <!-- Step -->
   <app-form-gv id="form"></app-form-gv>
 
+  <app-landing-page-countries [countries]='countries'></app-landing-page-countries>
+
   <section class="product-steps margin-top-and-bottom">
     <div class="container">
       <div class="row">
