--- a/src/app/landing-page-countries/landing-page-countries.component.html
+++ b/src/app/landing-page-countries/landing-page-countries.component.html
@@ -7,10 +7,10 @@
         </h1>
       </div>
     </div>
-    <div class='row'>
+    <div class='row'  id='content-wrapper'  [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }">
         <div class='col-lg-3'>
           <ul>
-            <li *ngFor='let country of countries' [ngClass]='{"active": country.active }' (click)='selectCountry(country)'>
+            <li *ngFor='let country of countries' class='li-country' [ngClass]="{'active': country.active, 'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global' }" (click)='selectCountry(country)'>
               <img src='{{ country.flag }}'>
               <label>{{ country.name }}</label>
               <div *ngIf='country.active' class=' animated faster fadeIn mobile'>
